<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activityMainTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:text="@string/signOutButtonText"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signOutButton"
                android:layout_marginTop="128dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/material_dynamic_neutral90">

                <ImageView
                    android:id="@+id/deviceIconImageView"
                    android:layout_width="84dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/gate"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/device_icon"
                    android:layout_margin="12dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toEndOf="@+id/deviceIconImageView"
                    android:layout_marginStart="12dp">

                    <TextView
                        android:id="@+id/deviceNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CarShield"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="10dp"
                        />

                    <TextView
                        android:id="@+id/deviceLocationTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Buftea"
                        android:textSize="12sp"
                        app:layout_constraintTop_toBottomOf="@+id/deviceNameTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="6dp"/>

                    <TextView
                        android:id="@+id/deviceStatusTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="Status: disconnected"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <ImageView
                        android:id="@+id/connectivityStatusImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@drawable/disconnected"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/deviceCommandImageView"
                    android:layout_width="84dp"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="12dp"
                    android:background="@drawable/reload"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/addDeviceImageButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="28dp"
                android:background="@drawable/add"
                android:contentDescription="@string/add_device"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/deviceActivityFrame">
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>